--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-l
+<script>
+window.embeddedChatbotConfig = {
+chatbotId: "DZdNu0nQJby2wqN55fHCW",
+domain: "ai.mastergpt.fr"
+}
+</script>
+<script
+src="https://ai.mastergpt.fr/embed.min.js"
+chatbotId="DZdNu0nQJby2wqN55fHCW"
+domain="ai.mastergpt.fr"
+defer>
+</script>
